# maskgit3d

./: .gitignore  AGENTS.md  CLAUDE.md  CLI.md  README.md  plan.md  pyproject.toml
.prompts/: refactor_metrics_to_callbacks.md
archive/data/: medmnist3d.py  medmnist_provider.py
configs/model/: vqvae.yaml
configs/trainer/: default.yaml
docs/: autoresearch-bootstrap.skill  best_vqvae_config.md  program.md  v3-implementation-progress.md
docs/migration/: v2.0.md
docs/plans/: 2026-03-06-axial-slice-visualization-design.md  2026-03-06-axial-slice-visualization.md  2026-03-07-v2-architecture-design.md  2026-03-07-v2-implementation.md
src/maskgit3d/: AGENTS.md  __init__.py  eval.py  train.py
src/maskgit3d/application/: __init__.py  pipeline.py
src/maskgit3d/callbacks/: __init__.py  cuda_memory.py  fid_logging.py  gradient_norm.py  mask_accuracy.py  masked_cross_entropy.py  maskgit_metrics.py  nan_detection.py  reconstruction_loss.py  sample_saving.py  training_stability.py  training_time.py  vqvae_metrics.py  vqvae_training_losses.py
src/maskgit3d/cli/: __init__.py  main.py  test.py  train.py
src/maskgit3d/conf/: README.md  config.yaml  eval.yaml  train.yaml  train_brats.yaml  train_brats_maskgit.yaml  train_medmnist.yaml
src/maskgit3d/conf/callbacks/: cuda_memory.yaml  default.yaml  early_stopping.yaml  early_stopping_maskgit.yaml  early_stopping_vqvae_fid.yaml  eval_default.yaml  fid_logging.yaml  gradient_norm.yaml  lr_monitor.yaml  mask_accuracy.yaml  masked_cross_entropy.yaml  maskgit.yaml  maskgit_metrics.yaml  model_checkpoint.yaml  model_checkpoint_maskgit.yaml  model_checkpoint_vqvae_fid.yaml  nan_detection.yaml  reconstruction_loss.yaml  sample_saving.yaml  training_stability.yaml  training_time.yaml  vqvae.yaml  vqvae_medmnist.yaml  vqvae_metrics.yaml  vqvae_training_losses.yaml
src/maskgit3d/conf/data/: brats2023.yaml  medmnist3d.yaml
src/maskgit3d/conf/dataset/: brats.yaml  (+3 more)
src/maskgit3d/config/: __init__.py  modules.py  registry.py  schemas.py
src/maskgit3d/data/: __init__.py  medmnist3d.py  transforms.py
src/maskgit3d/domain/: __init__.py  interfaces.py
src/maskgit3d/inference/: __init__.py  reconstruction.py
src/maskgit3d/infrastructure/: __init__.py
src/maskgit3d/interfaces/: __init__.py  models.py  training.py
src/maskgit3d/losses/: __init__.py  gan_loss.py  mask_weighted_ce.py  perceptual_loss.py  vq_loss.py  vq_perceptual_loss.py
src/maskgit3d/metrics/: fid.py  image_metrics.py
src/maskgit3d/runtime/: __init__.py  callback_selection.py  checkpoints.py  composition.py  model_factory.py  modules.py  optimizer_factory.py  scheduler_factory.py
src/maskgit3d/tasks/: base_task.py  gan_training_strategy.py  incontext_task.py  maskgit_task.py  output_contracts.py  vqvae_task.py
src/maskgit3d/training/: __init__.py  incontext_steps.py  maskgit_steps.py  vqvae_steps.py
src/maskgit3d/utils/: __init__.py  geometry.py  sliding_window.py
tests/: conftest.py
tests/integration/: test_callback_integration.py  test_crop_roi_config.py  test_hydra_overrides.py  test_incontext_training.py  test_pipeline_integration.py  test_slice_visualization.py  test_task_config_contracts.py
tests/unit/: test_base_vq_model_additional.py  test_brats_provider_coverage.py  test_callbacks.py  test_callbacks_fabric.py  test_checkpoint_manager.py  test_cli.py  test_cli_additional.py  test_cli_train_coverage.py  test_config.py  test_config_modules_comprehensive.py  test_config_registry.py  test_data_augmentation.py  test_data_padding.py  test_data_providers.py  test_encoder_decoder_3d.py  test_lightning_adapter.py  test_maisi_vq_model.py  test_maskgit_model_additional.py  test_maskgit_model_comprehensive.py  test_maskgit_transformer.py  test_medmnist_coverage.py  test_modules_coverage.py  test_pipeline_comprehensive.py  test_pipeline_extended.py  test_pipeline_metrics.py  test_quantize_additional.py  test_sample.py  test_sampling_extended.py  test_strategies.py  test_strategies_coverage.py  test_strategies_extended.py  test_strategies_sliding_window.py  test_train_eval.py  test_training_mask_scheduler.py  test_transforms_extended.py  test_vqgan.py  test_vqgan_base.py
tests/unit/callbacks/: test_cuda_memory.py  test_fid_logging.py  test_gradient_norm.py  test_maskgit_metrics.py  test_nan_detection.py  test_training_time.py  test_vqvae_metrics.py
tests/unit/config/: test_schemas.py
tests/unit/data/: test_medmnist3d.py  test_transforms.py
tests/unit/inference/: test_reconstruction.py
tests/unit/interfaces/: test_models.py  test_training.py
tests/unit/losses/: test_gan_loss.py  test_mask_weighted_ce.py  test_perceptual_loss.py  test_vq_loss.py  test_vq_perceptual_loss.py
tests/unit/metrics/: test_fid.py  test_image_metrics.py
tests/unit/runtime/: test_checkpoint_loader.py  test_composition.py  test_composition_builders.py  test_model_factory.py  test_optimizer_factory.py  test_scheduler_factory.py
tests/unit/tasks/: test_base_task.py  test_checkpoint_compat.py  test_incontext_task.py  test_maskgit_task.py  test_output_contracts.py  test_vqvae_task.py  test_vqvae_task_perceptual.py
tests/unit/training/: test_incontext_steps.py  test_maskgit_steps.py  test_vqvae_steps.py
tests/unit/utils/: test_sliding_window.py
(+127 files in other folders)
